# xsens_mti_ros_node

./: .gitignore  CMakeLists.txt  README.md
xsens_driver/: CMakeLists.txt  package.xml
xsens_driver/launch/: mti_G_700.launch
xsens_driver/src/: mtdef.py  mtdevice.py  mtdevice.py.bak  mtnode.py
xsens_msgs/: CMakeLists.txt  package.xml
